tr(cleanup): remove dead Java code
* remove dead Java code
* keep ConsumerNotFoundException for compatibility but have it extend
ServletException